# skeletons

./: README.md
ocaml-base/: cookiecutter.json
ocaml-base/{{cookiecutter.project_name}}/: .ocamlformat  LICENSE.md  README.md  dune-project
ocaml-base/{{cookiecutter.project_name}}/lib/: dune  {{cookiecutter.project_name}}.ml
ocaml-base/{{cookiecutter.project_name}}/test/: dune  {{cookiecutter.project_name}}.ml
pandoc-slides/: .gitignore  Makefile  README.md  slides.md
python-base/: cookiecutter.json
python-base/{{cookiecutter.project_name}}/: .envrc  .flake8  pyproject.toml
python-netdevops/: cookiecutter.json
python-netdevops/{{cookiecutter.project_name}}/: .envrc  .flake8  LICENSE.md  config.yaml  hosts.yaml  pyproject.toml
