(lang dune 3.5)
(name {{cookiecutter.project_name}})
(generate_opam_files true)
(source (github verbosemode/{{cookiecutter.project_name}}))
(authors "Jochen Bartl <jochen@verbosemo.de>")
(maintainers "Jochen Bartl <jochen@verbosemo.de>")
(license ISC)
(documentation "https://verbosemode.github.io/{{cookiecutter.project_name}}/")
(package
 (name {{cookiecutter.project_name}})
 (synopsis "Some random library")
 (description "A longer description about some random library")
 (depends
  (ocaml (>= 4.08.0))
  (alcotest :with-test)
  (odoc :with-doc)))
