[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Unknown <unknown@example.com>"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
{%- if cookiecutter.use_pydantic == "y" %}
pydantic = "*"
{%- endif %}

[tool.poetry.dev-dependencies]
pytest = "*"
ptpython = "*"
pynvim = "*"
jedi = {git = "https://github.com/davidhalter/jedi.git", rev = "master"}
flake8 = "*"
flake8-builtins = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
mypy = "*"
bandit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
{%- if cookiecutter.use_pydantic == "y" %}
plugins = "pydantic.mypy"
{%- endif %}
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.isort]
profile = "black"
