[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Unknown <unknown@example.com>"]
license = "ISC"
packages = [
    { include = "{{cookiecutter.project_name}}", from = "src" },
    # Include single modules
    # { include = "{{cookiecutter.project_name}}.py", from = "src" },
]

# [tool.poetry.scripts]
# {{cookiecutter.project_name}}_main = "{{cookiecutter.project_name}}.cli:main"
# {{cookiecutter.project_name}}_main2 = "{{cookiecutter.project_name}}.cli:main2"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
pip = "~23"
wheel = "~0.42"
setuptools = "~69"
{%- if cookiecutter.use_pydantic == "y" %}
pydantic = "*"
# pydantic-settings = "*"
{%- endif %}
# YAML
# "ruamel.yaml" = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
ptpython = "*"
flake8 = "*"
flake8-builtins = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
mypy = "*"
bandit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
{%- if cookiecutter.use_pydantic == "y" %}
plugins = "pydantic.mypy"
{%- endif %}
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
implicit_reexport = false
show_column_numbers = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

{%- if cookiecutter.use_pydantic == "y" %}
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
{%- endif %}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
