[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Unknown <unknown@example.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
{%- if cookiecutter.use_pydantic == "y" %}
pydantic = "*"
{%- endif %}
# YAML
# "ruamel.yaml" = "*"
# rich = "*"
# dependencies for >= 1.6.53 increased significantly
ciscoconfparse = "^1.7.5"
## Scrapli
scrapli = {extras = ["textfsm"], version = "~2023.01.30"}
## Nornir
nornir = "^3.3"
nornir-utils = "^0.2"
nornir-jinja2 = "^0.2"
nornir-ansible = "~2022.07.30"
nornir-scrapli = "~2023.01.30"
# Cisco ASA
scrapli-community = "~2023.01.30"
# scrapli-community = {git = "https://github.com/scrapli/scrapli_community.git", rev = "develop"}
ntc-templates = "^3.2"
netutils = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "*"
ptpython = "*"
jedi = "^0.18.2"
flake8 = "*"
flake8-builtins = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
mypy = "*"
bandit = "*"
ipdb = "*"
nornir-inspect = "^1.0"

[tool.mypy]
{%- if cookiecutter.use_pydantic == "y" %}
plugins = "pydantic.mypy"
{%- endif %}
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_cases = true
warn_return_any = true
warn_unused_config = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
