[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Unknown <unknown@example.com>"]
license = "ISC"
packages = [
    # make sure to create
    # - src/{{cookiecutter.project_name}}
    # - src/{{cookiecutter.project_name}}/__init__.py
    { include = "{{cookiecutter.project_name}}", from = "src" },
    # Include single modules
    # { include = "{{cookiecutter.project_name}}.py", from = "src" },
]

# [tool.poetry.scripts]
# {{cookiecutter.project_name}}_main = "{{cookiecutter.project_name}}.cli:main"
# {{cookiecutter.project_name}}_main2 = "{{cookiecutter.project_name}}.cli:main2"

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
{%- if cookiecutter.use_pydantic == "y" %}
pydantic = "*"
# pydantic-settings = "*"
# pydantic-xml = "*"
{%- endif %}
# YAML
# "ruamel.yaml" = "*"
# rich = "*"
ciscoconfparse2 = "~1.9"
## Scrapli
scrapli = {extras = ["textfsm"], version = "~2024.07.30"}
## Nornir
nornir = "~3.4"
nornir-utils = "^0.2"
nornir-jinja2 = "^0.2"
nornir-ansible = "~2023.12.28"
nornir-scrapli = "~2024.07.30"
# Cisco ASA
scrapli-cfg = "~2024.07.30"
scrapli-community = "~2024.07.30"
# scrapli-community = {git = "https://github.com/scrapli/scrapli_community.git", rev = "develop"}
ntc-templates = "~7"
netutils = "~1.10"
# aerleon = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
# ptpython = "*"
# flake8 = "*"
# flake8-builtins = "*"
# flake8-bugbear = "*"
# flake8-docstrings = "*"
# bandit = "*"
# ipdb = "*"
# nornir-inspect = "^1.0"

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
{%- if cookiecutter.use_pydantic == "y" %}
plugins = "pydantic.mypy"
{%- endif %}
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
implicit_reexport = false
show_column_numbers = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

{%- if cookiecutter.use_pydantic == "y" %}
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
{%- endif %}

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
